Fixing an FR-ui problem with the footer which is too high for it's parent body and html elements, and so causes a scroll bar to always appear regardless of the amount of content on the page.

--- a/forgerock-ui-user/src/main/resources/css/user/layout.less
+++ b/forgerock-ui-user/src/main/resources/css/user/layout.less
@@ -106,12 +106,18 @@
     clear: both;
     background: @footer-background-color;
     font-size: 11px;
+    height: @footer-height;
     margin-top: -@footer-height;
-    padding: 45px 0 45px 0;
     text-align: center;
+    display: table;
+    width: 100%;
     .container {
         width: auto;
+        display: table-cell;
+        vertical-align: middle;
+        padding:10px 0 0;
     }
+
 }
 
 
